--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,98 +9,13 @@
 	</header>
 	<tabset>
 		<tab heading="Home">
-			<div class="row">
+			<div id="homeTab">
 				<div class="medium-4 columns">
-						
 					<section class="bordered">
 						<h2>Most liked in this month</h2>
 						<ul class="item-list"> 
-							<li>
-								<div class="medium-3 columns">
-									<a href="#/music" class="hex-item">
-										<div class="hex">   
-											<div class="inner">
-											</div>    
-											<div class="corner-1"></div>
-											<div class="corner-2"></div>
-										</div>
-									</a>
-								</div>
-								<div class="medium-9 columns">
-									<h3>Some item</h3>
-									<span class="author">Publisher</span>
-									<p>Asdasdasd</p>
-								</div>
-							</li>
-							<li>
-								<div class="medium-3 columns">
-									<a href="#/music" class="hex-item">
-										<div class="hex">   
-											<div class="inner">
-											</div>    
-											<div class="corner-1"></div>
-											<div class="corner-2"></div>
-										</div>
-									</a>
-								</div>
-								<div class="medium-9 columns">
-									<h3>Some item</h3>
-									<span class="author">Publisher</span>
-									<p>Asdasdasd</p>
-								</div>
-							</li>
-							<li>
-								<div class="medium-3 columns">
-									<a href="#/music" class="hex-item">
-										<div class="hex">   
-											<div class="inner">
-											</div>    
-											<div class="corner-1"></div>
-											<div class="corner-2"></div>
-										</div>
-									</a>
-								</div>
-								<div class="medium-9 columns">
-									<h3>Some item</h3>
-									<span class="author">Publisher</span>
-									<p>Asdasdasd</p>
-								</div>
-							</li>
-							<li>
-								<div class="medium-3 columns">
-									<a href="#/music" class="hex-item">
-										<div class="hex">   
-											<div class="inner">
-											</div>    
-											<div class="corner-1"></div>
-											<div class="corner-2"></div>
-										</div>
-									</a>
-								</div>
-								<div class="medium-9 columns">
-									<h3>Some item</h3>
-									<span class="author">Publisher</span>
-									<p>Asdasdasd</p>
-								</div>
-							</li>
-						</ul>
-					</section>
-						
-				</div>
-				<div class="medium-4 columns">
-					<section class="bordered">
-						<h2>New arrivals</h2>
-							<ul class="item-list"> 
 								<li>
 									<div class="medium-3 columns">
-										<a href="#/music" class="hex-item">
-											<div class="hex">   
-												<div class="inner">
-												</div>    
-												<div class="corner-1"></div>
-												<div class="corner-2"></div>
-											</div>
-										</a>
 									</div>
 									<div class="medium-9 columns">
 										<h3>The basics of Ukulele</h3>
@@ -110,14 +25,7 @@
 								</li>
 								<li>
 									<div class="medium-3 columns">
-										<a href="#/music" class="hex-item">
-											<div class="hex">   
-												<div class="inner">
-												</div>    
-												<div class="corner-1"></div>
-												<div class="corner-2"></div>
-											</div>
-										</a>
+
 									</div>
 									<div class="medium-9 columns">
 										<h3>GuitarBots</h3>
@@ -127,14 +35,7 @@
 								</li>
 								<li>
 									<div class="medium-3 columns">
-										<a href="#/music" class="hex-item">
-											<div class="hex">   
-												<div class="inner">
-												</div>    
-												<div class="corner-1"></div>
-												<div class="corner-2"></div>
-											</div>
-										</a>
+										
 									</div>
 									<div class="medium-9 columns">
 										<h3>Geogebra</h3>
@@ -142,28 +43,9 @@
 										<p>Ilmainen dynaaminen ohjelmisto matematiikan ja luonnontieteiden oppimisen ja opettamisen avuksi</p>
 									</div>
 								</li>
-								<li>
-									<div class="medium-3 columns">
-										<a href="#/music" class="hex-item">
-											<div class="hex">   
-												<div class="inner">
-												</div>    
-												<div class="corner-1"></div>
-												<div class="corner-2"></div>
-											</div>
-										</a>
-									</div>
-									<div class="medium-9 columns">
-										<h3>Some item</h3>
-										<span class="author">Publisher</span>
-										<p>Asdasdasd</p>
-									</div>
-								</li>
 							</ul>
-						</section>
-				</div>
-				<div class="medium-4 columns">
-					<div class="carousel">
+					</section>
+					<section class="carousel">
 						<img src="/images/GB_PracticeMode.jpg">
 						<div class="caption">
 							<h1>Guitar Bots</h1>
@@ -174,8 +56,127 @@
 						</div>
 						<a href="#" class="prev"><i class="icon-arrow-left"></i></a> 
 						<a href="#" class="next"><i class="icon-arrow-right"></i></a> 
-					</div>
+					</section>
+					<section class="bordered">
+						<h2>Popular games</h2>
+						<ul class="item-list"> 
+								<li>
+									<div class="medium-3 columns">
+									</div>
+									<div class="medium-9 columns">
+										<h3>The basics of Ukulele</h3>
+										<span class="author">Rockway</span>
+										<p>Tällä kurssilla käydään seikkaperäisesti läpi ukulelensoiton perusasioita.</p>
+									</div>
+								</li>
+								<li>
+									<div class="medium-3 columns">
 
+									</div>
+									<div class="medium-9 columns">
+										<h3>GuitarBots</h3>
+										<span class="author">Ovelin</span>
+										<p>GuitarBots is an online game that makes guitar training more fun and motivating.</p>
+									</div>
+								</li>
+								<li>
+									<div class="medium-3 columns">
+										
+									</div>
+									<div class="medium-9 columns">
+										<h3>Geogebra</h3>
+										<span class="author">Geogebra</span>
+										<p>Ilmainen dynaaminen ohjelmisto matematiikan ja luonnontieteiden oppimisen ja opettamisen avuksi</p>
+									</div>
+								</li>
+							</ul>
+					</section>
+					
+					
+				</div>
+				<div class="medium-4 columns">
+					<section class="carousel">
+						<img src="/images/GB_PracticeMode.jpg">
+						<div class="caption">
+							<h1>Guitar Bots</h1>
+							<div class="info">
+								<span class="autor"><a href="#">Ovelin</a></span>
+							</div>
+							<p>This is a cool text related the product</p>
+						</div>
+						<a href="#" class="prev"><i class="icon-arrow-left"></i></a> 
+						<a href="#" class="next"><i class="icon-arrow-right"></i></a> 
+					</section>
+					<section class="bordered">
+						<h2>This week at Cloudclub</h2>
+						<ul class="item-list"> 
+								<li>
+									<div class="medium-3 columns">
+									</div>
+									<div class="medium-9 columns">
+										<h3>The basics of Ukulele</h3>
+										<span class="author">Rockway</span>
+										<p>Tällä kurssilla käydään seikkaperäisesti läpi ukulelensoiton perusasioita.</p>
+									</div>
+								</li>
+								<li>
+									<div class="medium-3 columns">
+
+									</div>
+									<div class="medium-9 columns">
+										<h3>GuitarBots</h3>
+										<span class="author">Ovelin</span>
+										<p>GuitarBots is an online game that makes guitar training more fun and motivating.</p>
+									</div>
+								</li>
+								<li>
+									<div class="medium-3 columns">
+										
+									</div>
+									<div class="medium-9 columns">
+										<h3>Geogebra</h3>
+										<span class="author">Geogebra</span>
+										<p>Ilmainen dynaaminen ohjelmisto matematiikan ja luonnontieteiden oppimisen ja opettamisen avuksi</p>
+									</div>
+								</li>
+							</ul>
+					</section>
+				</div>
+				<div class="medium-4 columns">		
+					<section class="bordered">
+						<h2>New arrivals</h2>
+							<ul class="item-list"> 
+								<li>
+									<div class="medium-3 columns">
+									</div>
+									<div class="medium-9 columns">
+										<h3>The basics of Ukulele</h3>
+										<span class="author">Rockway</span>
+										<p>Tällä kurssilla käydään seikkaperäisesti läpi ukulelensoiton perusasioita.</p>
+									</div>
+								</li>
+								<li>
+									<div class="medium-3 columns">
+
+									</div>
+									<div class="medium-9 columns">
+										<h3>GuitarBots</h3>
+										<span class="author">Ovelin</span>
+										<p>GuitarBots is an online game that makes guitar training more fun and motivating.</p>
+									</div>
+								</li>
+								<li>
+									<div class="medium-3 columns">
+										
+									</div>
+									<div class="medium-9 columns">
+										<h3>Geogebra</h3>
+										<span class="author">Geogebra</span>
+										<p>Ilmainen dynaaminen ohjelmisto matematiikan ja luonnontieteiden oppimisen ja opettamisen avuksi</p>
+									</div>
+								</li>
+							</ul>
+						</section>
 					<section>
 						<h2>Latest discussion</h2>
 						<ul class="post-list comments">
@@ -187,93 +188,13 @@
 						</ul>
 						<a href="#" class="button small right">Go to the forum</a>
 					</section>
-				
-					
-				</div>
-			</div>
-			
-			<div class="row">
-				
-
-				<div class="small-4 columns">
-						<h2>This week at Cloudclub</h2>
-						<ul class="item-list"> 
-							<li class="row">
-								<div class="medium-3 columns">
-									<a href="#/music" class="hex-item">
-										<div class="hex">   
-											<div class="inner">
-											</div>    
-											<div class="corner-1"></div>
-											<div class="corner-2"></div>
-										</div>
-									</a>
-								</div>
-								<div class="medium-9 columns">
-									<h3>Some item</h3>
-									<span class="author">Publisher</span>
-									<p>Asdasdasd</p>
-								</div>
-							</li>
-							<li class="row">
-								<div class="medium-3 columns">
-									<a href="#/music" class="hex-item">
-										<div class="hex">   
-											<div class="inner">
-											</div>    
-											<div class="corner-1"></div>
-											<div class="corner-2"></div>
-										</div>
-									</a>
-								</div>
-								<div class="medium-9 columns">
-									<h3>Some item</h3>
-									<span class="author">Publisher</span>
-									<p>Asdasdasd</p>
-								</div>
-							</li>
-							<li class="row">
-								<div class="medium-3 columns">
-									<a href="#/music" class="hex-item">
-										<div class="hex">   
-											<div class="inner">
-											</div>    
-											<div class="corner-1"></div>
-											<div class="corner-2"></div>
-										</div>
-									</a>
-								</div>
-								<div class="medium-9 columns">
-									<h3>Some item</h3>
-									<span class="author">Publisher</span>
-									<p>Asdasdasd</p>
-								</div>
-							</li>
-							<li class="row">
-								<div class="medium-3 columns">
-									<a href="#/music" class="hex-item">
-										<div class="hex">   
-											<div class="inner">
-											</div>    
-											<div class="corner-1"></div>
-											<div class="corner-2"></div>
-										</div>
-									</a>
-								</div>
-								<div class="medium-9 columns">
-									<h3>Some item</h3>
-									<span class="author">Publisher</span>
-									<p>Asdasdasd</p>
-								</div>
-							</li>
-						</ul>
-					<div ui-view></div>
-				</div>
-			</div>
+				</div>							
+			</div><!--/homeTab-->
 		</tab>
+
 		<tab heading="Subjects">
 			<div class="medium-12 columns subjects">
-					<div class="small-6 columns">
+					
 						<div class="subject-group">
 							<h2>Languages</h2>
 							<a href="#" class="hex-item">
@@ -370,8 +291,7 @@
 
 
 						</div>
-					</div>
-					<div class="small-6 columns">
+					
 
 						<div class="subject-group">
 							<h2>Natural Sciences</h2>
@@ -469,7 +389,7 @@
 								<h3>Society knowledge</h3>
 							</a>
 						</div>
-					</div>
+					
 				</div>
 		</tab>
 		<tab heading="Themes">
