--- a/app/styles/_navigation.scss
+++ b/app/styles/_navigation.scss
@@ -25,15 +25,24 @@ $mutedBlack: #333;
 	overflow: hidden;
 	padding: 0.3em;
 	position: relative;
+	margin-left: 1em;
 	ul {
 		float: right;
 		list-style: none;
 		margin: 0;
+		font-weight: 400;
 		li {
 			margin-right: 1em;
 			float: left;
+			i {
+				margin-right: 0;
+			}
+		}
+		&.nav {
+			font-weight: 300;
 		}
 	}
+
 }
 
 .sidebar {
@@ -83,15 +92,16 @@ $mutedBlack: #333;
 }
 .tabs dd > a {
 	background: #fff;
-	border-bottom: 2px solid #ddd;
 }
 .tabs dd.active a {
-	border-color: #FFAD00 !important;
+	background: #FFDE98 !important;
 	font-weight: 400;
 }
 #authorTab, #personalTab {
 	float: right;
 }
 .tabs {
-	margin-bottom: 1em !important;
+	border-bottom: 1px solid #ccc;
+}
+.content {
 }
